--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -70,14 +70,14 @@ presort = {04},
 rmdnote={pdf=https://ieeexplore.ieee.org/document/8286939/}
 }
 
-@book{joseph2018adversarial,
+@book{joseph2019adversarial,
 title = {Adversarial Machine Learning},
-year = {2018},
+year = {2019},
 author = {Joseph, Anthony D. and Nelson, Blaine and Rubinstein, Benjamin I. P. and Tygar, J. D.},
 publisher = {Cambridge University Press},
-note = {in press},
+note = {in press for Feb 2019 publication},
 rmdnote = {pub=https://www.cambridge.org/core/books/adversarial-machine-learning/C42A9D49CBC626DF7B8E54E72974AA3B},
-presort={05}
+presort={03}
 }
 
 @misc{culnane2018options,
