--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -5,7 +5,8 @@
   booktitle={The 38th Annual IEEE International Conference on Computer Communications},
   series={INFOCOM},
   note={accepted},
-  presort={01}
+  presort={01},
+  rmdnote={full=https://arxiv.org/abs/1901.05562}
 }
 
 @inproceedings{alfeld2019attacking,
@@ -149,6 +150,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   series={AAAI},
   year={2017},
   month={Feb},
+  pages={1705--1711},
   presort={03},
   rmdnote={pdf=http://www.aaai.org/Conferences/AAAI/2017/PreliminaryPapers/12-Alda-14735.pdf;full=https://arxiv.org/abs/1507.04499;code=https://brubinstein.github.io/diffpriv}
 }
