--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1,11 +1,21 @@
-@inproceedings{roohi2019,
+@inproceedings{li2019truth,
+  title={Truth inference at scale: {A} {B}ayesian model for adjudicating highly redundant crowd annotations},
+  author={Li, Yuan and Rubinstein, Benjamin I. P. and Cohn, Trevor},
+  year={2019},
+  booktitle={Proceedings of the 2019 World Wide Web Conferece},
+  series={WWW},
+  note={accepted},
+  presort={01}
+}
+
+@inproceedings{roohi2019differentiallyprivate,
   title={Differentially-Private Two-Party Egocentric Betweenness Centrality},
   author={Roohi, Leyla and Rubinstein, Benjamin I. P. and Teague, Vanessa},
   year={2019},
   booktitle={The 38th Annual IEEE International Conference on Computer Communications},
   series={INFOCOM},
   note={accepted},
-  presort={01},
+  presort={02},
   rmdnote={full=https://arxiv.org/abs/1901.05562}
 }
 
@@ -16,7 +26,7 @@
   series={AAAI},
   note={accepted},
   year={2019},
-  presort={02}
+  presort={03}
 }
 
 @inproceedings{fanaeepour2018histogramming,
@@ -76,9 +86,9 @@ title = {Adversarial Machine Learning},
 year = {2019},
 author = {Joseph, Anthony D. and Nelson, Blaine and Rubinstein, Benjamin I. P. and Tygar, J. D.},
 publisher = {Cambridge University Press},
-note = {in press for Feb 2019 publication},
+note = {in press for April 2019 publication},
 rmdnote = {pub=https://www.cambridge.org/core/books/adversarial-machine-learning/C42A9D49CBC626DF7B8E54E72974AA3B},
-presort={03}
+presort={04}
 }
 
 @misc{culnane2018options,
