Fixing PDF links or labels

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -26,7 +26,8 @@
   series={AAAI},
   note={accepted},
   year={2019},
-  presort={03}
+  presort={03},
+  rmdnote={pdf=https://www.aaai.org/Papers/AAAI/2019/AAAI-AlfeldS.6136.pdf}
 }
 
 @inproceedings{fanaeepour2018histogramming,
@@ -39,7 +40,7 @@
   pages={1204--1207},
   organization={IEEE},
   presort={01},
-  rmdnote={pdf=http://doi.ieeecomputersociety.org/10.1109/ICDE.2018.00111;full=https://arxiv.org/abs/1702.05607}
+  rmdnote={full=https://arxiv.org/abs/1702.05607;pub=http://doi.ieeecomputersociety.org/10.1109/ICDE.2018.00111}
 }
 
 @inproceedings{han2018reinforcement,
@@ -51,7 +52,7 @@
   year={2018},
   organization={Springer},
   presort={02},
-  rmdnote={pdf=https://link.springer.com/book/10.1007/978-3-030-01554-1;full=https://arxiv.org/abs/1808.05770}
+  rmdnote={full=https://arxiv.org/abs/1808.05770;pub=https://link.springer.com/book/10.1007/978-3-030-01554-1}
 }
 
 @article{fanaeepour2018differentially,
@@ -65,7 +66,7 @@
   number={1},
   publisher={Springer London},
   presort={03},
-  rmdnote={pdf=https://link.springer.com/article/10.1007/s10115-017-1113-6}
+  rmdnote={pub=https://link.springer.com/article/10.1007/s10115-017-1113-6}
 }
 
 @article{lyu2018ppfa,
@@ -78,7 +79,7 @@ volume = {14},
 number = {8},
 pages = {3733-3744},
 presort = {04},
-rmdnote={pdf=https://ieeexplore.ieee.org/document/8286939/}
+rmdnote={pub=https://ieeexplore.ieee.org/document/8286939/}
 }
 
 @book{joseph2019adversarial,
@@ -100,7 +101,7 @@ presort={04}
   year={2018},
   month={Feb},
   presort={06},
-  rmdnote={pdf=https://arxiv.org/abs/1802.07975}
+  rmdnote={pdf=https://arxiv.org/pdf/1802.07975}
 }
 
 @inproceedings{aye2018fast,
@@ -112,7 +113,7 @@ month = {Feb},
 year = {2018},
 presort={07},
 pages={452--464},
-rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
+rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
 }
 
 @inproceedings{han2018adequacy,
@@ -123,7 +124,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   year={2018},
   month={Jan},
   presort={08},
-  rmdnote={pdf=https://arxiv.org/abs/1704.01704}
+  rmdnote={pdf=https://arxiv.org/pdf/1704.01704}
 }
 
 @article{marchant2017in,
@@ -150,7 +151,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={May},
   organization={PMLR},
   presort={02},
-  rmdnote={pdf=http://proceedings.mlr.press/v70/rubinstein17a.html;full=https://arxiv.org/abs/1706.02562;code=https://brubinstein.github.io/diffpriv}
+  rmdnote={pdf=http://proceedings.mlr.press/v70/rubinstein17a/rubinstein17a.pdf;full=https://arxiv.org/abs/1706.02562;code=https://brubinstein.github.io/diffpriv}
 }
 
 @inproceedings{alda2017the,
@@ -175,7 +176,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   year={2017},
   month={Mar},
   presort={04},
-  rmdnote={pdf=http://www.jmlr.org/papers/v18/15-257.html}
+  rmdnote={pdf=http://www.jmlr.org/papers/volume18/15-257/15-257.pdf}
 }
 
 @article{lau2017machinelearning,
@@ -189,7 +190,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Apr},
   publisher={LWW},
   presort={05},
-  rmdnote={pdf=https://www.ncbi.nlm.nih.gov/pubmed/27941428}
+  rmdnote={pub=https://www.ncbi.nlm.nih.gov/pubmed/27941428}
 }
 
 @book{verkade2017misconceptions,
@@ -211,7 +212,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   year={2017},
   month={Sep},
   presort={07},
-  rmdnote={pdf=https://arxiv.org/abs/1709.09778}
+  rmdnote={pdf=https://arxiv.org/pdf/1709.09778}
 }
 
 @inproceedings{liu2017estorm,
@@ -222,7 +223,8 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   pages={571--580},
   year={2017},
   organization={IEEE},
-  presort={08}
+  presort={08},
+  rmdnote={pdf=http://www.buyya.com/papers/E-Storm2017.pdf;pub=https://ieeexplore.ieee.org/document/8025331/}
 }
 
 @misc{culnane2017privacy,
@@ -234,7 +236,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   year={2017},
   month={May},
   presort={09},
-  rmdnote={pdf=https://arxiv.org/abs/1704.08547}
+  rmdnote={pdf=https://arxiv.org/pdf/1704.08547}
 }
 
 @misc{culnane2017vulnerabilities,
@@ -245,7 +247,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   eprintclass={cs.CR},
   year={2017},
   presort={10},
-  rmdnote={pdf=https://arxiv.org/abs/1712.00871;pop=https://pursuit.unimelb.edu.au/articles/how-small-details-can-create-a-big-problem}
+  rmdnote={pdf=https://arxiv.org/pdf/1712.00871;pop=https://pursuit.unimelb.edu.au/articles/how-small-details-can-create-a-big-problem}
 }
 
 @misc{culnane2017health,
@@ -257,7 +259,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   year={2017},
   month={Dec},
   presort={11},
-  rmdnote={pdf=https://arxiv.org/abs/1712.05627;pop=https://pursuit.unimelb.edu.au/articles/how-small-details-can-create-a-big-problem}
+  rmdnote={pdf=https://arxiv.org/pdf/1712.05627;pop=https://pursuit.unimelb.edu.au/articles/how-small-details-can-create-a-big-problem}
 }
 
 @inproceedings{verkade2017exploring,
@@ -267,7 +269,8 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   series={HERDSA},
   year={2017},
   month={Apr},
-  presort={12}
+  presort={12},
+  rmdnote={pdf=http://www.herdsa.org.au/system/files/Verkade_et_al_HERDSA2017.pdf;pub=http://www.herdsa.org.au/research-and-development-higher-education-vol-40-392}
 }
 
 @inproceedings{zhang2016on,
@@ -304,7 +307,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Dec},
   organization={IEEE},
   presort={03},
-  rmdnote={pdf=http://ieeexplore.ieee.org/document/7837837/;full=http://arxiv.org/abs/1609.07983;alert=Winner, WiE Best Postgraduate Student Paper, IEEE Australia Council}
+  rmdnote={full=http://arxiv.org/abs/1609.07983;pub=http://ieeexplore.ieee.org/document/7837837/;alert=Winner, WiE Best Postgraduate Student Paper, IEEE Australia Council}
 }
 
 @inproceedings{alpcan2016largescale,
@@ -317,7 +320,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Dec},
   organization={IEEE},
   presort={04},
-  rmdnote={pdf=http://ieeexplore.ieee.org/abstract/document/7798940/;full=http://arxiv.org/abs/1609.06438}
+  rmdnote={full=http://arxiv.org/abs/1609.06438;pub=http://ieeexplore.ieee.org/abstract/document/7798940/}
 }
 
 @article{han2016a,
@@ -331,7 +334,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Mar},
   publisher={IEEE},
   presort={05},
-  rmdnote={pdf=http://dx.doi.org/10.1109/TIFS.2015.2505680}
+  rmdnote={pub=http://dx.doi.org/10.1109/TIFS.2015.2505680}
 }
 
 @inproceedings{aye2016large,
@@ -344,7 +347,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Jul},
   organization={IEEE},
   presort={06},
-  rmdnote={pdf=http://ieeexplore.ieee.org/document/7727368/}
+  rmdnote={pub=http://ieeexplore.ieee.org/document/7727368/}
 }
 
 @inproceedings{sanchez2016fast,
@@ -357,7 +360,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Jul},
   organization={IEEE},
   presort={07},
-  rmdnote={pdf=http://ieeexplore.ieee.org/document/7727674/}
+  rmdnote={pub=http://ieeexplore.ieee.org/document/7727674/}
 }
 
 @inproceedings{milligan2016validity,
@@ -370,7 +373,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Apr},
   organization={ACM},
   presort={08},
-  rmdnote={pdf=https://doi.org/10.1145/2883851.2883956}
+  rmdnote={pub=https://doi.org/10.1145/2883851.2883956}
 }
 
 @misc{he2016topicresponse,
@@ -381,7 +384,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   eprintclass={cs.LG},
   year={2016},
   presort={09},
-  rmdnote={pdf=https://arxiv.org/abs/1607.08720;code=https://bitbucket.org/jiazhenhe/topicresponse}
+  rmdnote={pdf=https://arxiv.org/pdf/1607.08720;code=https://bitbucket.org/jiazhenhe/topicresponse}
 }
 
 @inproceedings{he2015identifying,
@@ -418,7 +421,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Apr},
   publisher={IEEE},
   presort={03},
-  rmdnote={pdf=http://ieeexplore.ieee.org/abstract/document/7095602/;full=http://arxiv.org/abs/1402.0282}
+  rmdnote={full=https://arxiv.org/pdf/1402.0282;pub=http://ieeexplore.ieee.org/abstract/document/7095602/}
 }
 
 @incollection{rubinstein2015bounding,
@@ -430,7 +433,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   year={2015},
   publisher={Springer},
   presort={04},
-  rmdnote={pdf=http://arxiv.org/abs/1401.7388;full=http://www.springer.com/us/book/9783319218519}
+  rmdnote={pdf=https://arxiv.org/pdf/1401.7388;pub=http://www.springer.com/us/book/9783319218519}
 }
 
 @article{fanaeepour2015the,
@@ -444,7 +447,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Jul},
   publisher={Springer},
   presort={05},
-  rmdnote={pdf=http://link.springer.com/article/10.1007/s10707-015-0228-8}
+  rmdnote={pub=http://link.springer.com/article/10.1007/s10707-015-0228-8}
 }
 
 @inproceedings{dimitrakakis2014robust,
@@ -457,7 +460,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Oct},
   organization={Springer},
   presort={01},
-  rmdnote={pdf=http://arxiv.org/abs/1306.1066v3}
+  rmdnote={pdf=https://arxiv.org/pdf/1306.1066v3}
 }
 
 @incollection{biggio2014security,
@@ -470,7 +473,7 @@ rmdnote={pdf=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   month={Feb},
   publisher={Springer},
   presort={02},
-  rmdnote={pdf=http://dx.doi.org/10.1007/978-3-319-02300-7_4;full=http://arxiv.org/abs/1401.7727}
+  rmdnote={full=http://arxiv.org/abs/1401.7727;pub=http://dx.doi.org/10.1007/978-3-319-02300-7_4}
 }
 
 @inproceedings{dimitrakakis2014proceedings,
@@ -482,7 +485,7 @@ pages={1--124},
 publisher={ACM Press},
 year={2014},
 presort={03},
-rmdnote={pdf=http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm}
+rmdnote={pub=https://dl.acm.org/citation.cfm?id=2666652&picked=prox}
 }
 
 @article{zhao2012a,
@@ -510,7 +513,7 @@ rmdnote={pdf=http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm}
   month={Jul},
   publisher={IEEE},
   presort={02},
-  rmdnote={pdf=http://arxiv.org/abs/1002.2044}
+  rmdnote={pdf=https://arxiv.org/pdf/1002.2044}
 }
 
 @article{nelson2012query,
@@ -536,7 +539,7 @@ rmdnote={pdf=http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm}
   pages={1221--1261},
   year={2012},
   presort={04},
-  rmdnote={pdf=http://jmlr.csail.mit.edu/papers/v13/rubinstein12a.html}
+  rmdnote={pdf=http://www.jmlr.org/papers/volume13/rubinstein12a/rubinstein12a.pdf}
 }
 
 @article{rubinstein2012learning,
@@ -550,7 +553,7 @@ rmdnote={pdf=http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm}
   month={Aug},
   note={Special Issue on Statistical and Learning-Theoretic Challenges in Data Privacy},
   presort={05},
-  rmdnote={pdf=http://repository.cmu.edu/jpc/vol4/iss1/4/;full=http://arxiv.org/abs/0911.5708}
+  rmdnote={pdf=https://journalprivacyconfidentiality.org/index.php/jpc/article/view/612/595;full=https://arxiv.org/pdf/0911.5708}
 }
 
 @article{barth2012a,
@@ -564,7 +567,7 @@ rmdnote={pdf=http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm}
   month={Jul},
   publisher={IEEE},
   presort={06},
-  rmdnote={pdf=http://doi.ieeecomputersociety.org/10.1109/TDSC.2011.42}
+  rmdnote={pub=http://doi.ieeecomputersociety.org/10.1109/TDSC.2011.42}
 }
 
 @inproceedings{negahban2012scaling,
@@ -577,7 +580,7 @@ rmdnote={pdf=http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm}
   month={Oct},
   organization={ACM},
   presort={07},
-  rmdnote={pdf=http://dx.doi.org/10.1145/2396761.2398606;full=http://arxiv.org/abs/1208.1860}
+  rmdnote={full=http://arxiv.org/abs/1208.1860;pub=http://dx.doi.org/10.1145/2396761.2398606}
 }
 
 @inproceedings{cardenas2012fifth,
@@ -590,7 +593,7 @@ rmdnote={pdf=http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm}
   month={Oct},
   organization={ACM},
   presort={08},
-  rmdnote={pdf=http://dx.doi.org/10.1145/2382196.2382327}
+  rmdnote={pub=http://dx.doi.org/10.1145/2382196.2382327}
 }
 
 @inproceedings{huang2011adversarial,
@@ -615,7 +618,7 @@ rmdnote={pdf=http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm}
   month={Feb},
   organization={IEEE},
   presort={02},
-  rmdnote={pdf=http://arxiv.org/abs/1102.4374}
+  rmdnote={pdf=https://arxiv.org/pdf/1102.4374}
 }
 
 @techreport{barth2011how,
@@ -627,7 +630,7 @@ rmdnote={pdf=http://www.sheridanprinting.com/CCS2014ep_11_4/forms/aisec.htm}
   year={2011},
   month={Aug},
   presort={03},
-  rmdnote={pdf=http://www.eecs.berkeley.edu/Pubs/TechRpts/2011/EECS-2011-98.html}
+  rmdnote={pdf=http://www2.eecs.berkeley.edu/Pubs/TechRpts/2011/EECS-2011-98.pdf}
 }
 
 @techreport{gemmell2011improving,
@@ -652,7 +655,7 @@ publisher={ACM Press},
 year={2011},
 month={Oct},
 presort={05},
-rmdnote={pdf=https://www.microsoft.com/en-us/research/publication/proceedings-of-the-4th-acm-workshop-on-security-and-artificial-intelligence/}
+rmdnote={pub=http://dl.acm.org/citation.cfm?id=2046684&coll=DL&dl=GUIDE&CFID=49909398&CFTOKEN=70172951}
 }
 
 @inproceedings{nelson2010nearoptimal,
@@ -696,7 +699,7 @@ rmdnote={pdf=https://www.microsoft.com/en-us/research/publication/proceedings-of
   school={Department of Electrical Engineering \& Computer Sciences, University of California, Berkeley},
   type={PhD dissertation},
   presort={04},
-  rmdnote={pdf=http://www.eecs.berkeley.edu/Pubs/TechRpts/2010/EECS-2010-71.html}
+  rmdnote={pdf=http://www2.eecs.berkeley.edu/Pubs/TechRpts/2010/EECS-2010-71.pdf}
 }
 
 @inproceedings{ghosh2009adaptive,
@@ -756,7 +759,7 @@ rmdnote={pdf=https://www.microsoft.com/en-us/research/publication/proceedings-of
   year={2009},
   publisher={Springer},
   presort={05},
-  rmdnote={pdf=http://www.springer.com/computer/security+and+cryptology/book/978-0-387-88734-0}
+  rmdnote={pub=http://www.springer.com/computer/security+and+cryptology/book/978-0-387-88734-0}
 }
 
 @mastersthesis{rubinstein2009bshifting,
@@ -766,7 +769,7 @@ school = {Faculty of Engineering, University of Melbourne},
 year = {2009},
 type = {MCompSci thesis},
 presort={06},
-rmdnote={pdf=http://repository.unimelb.edu.au/10187/5774}
+rmdnote={full=http://repository.unimelb.edu.au/10187/5774}
 }
 
 @inproceedings{rubinstein2008geometric,
@@ -822,7 +825,7 @@ rmdnote={pdf=http://repository.unimelb.edu.au/10187/5774}
   number={UCB/EECS-2008-73},
   year={2008},
   presort={05},
-  rmdnote={pdf=http://www.eecs.berkeley.edu/Pubs/TechRpts/2008/EECS-2008-73.html}
+  rmdnote={pdf=http://www2.eecs.berkeley.edu/Pubs/TechRpts/2008/EECS-2008-73.pdf}
 }
 
 @inproceedings{rubinstein2007shifting,
@@ -833,7 +836,7 @@ rmdnote={pdf=http://repository.unimelb.edu.au/10187/5774}
   pages={1193--1200},
   year={2007},
   presort={01},
-  rmdnote={pdf=http://books.nips.cc/papers/files/nips19/NIPS2006_0683.pdf}
+  rmdnote={pdf=http://papers.nips.cc/paper/2982-shifting-one-inclusion-mistake-bounds-and-tight-multiclass-expected-risk-bounds.pdf}
 }
 
 @proceedings{abraham2004proceedings,
