Updating adaptdatanaly arXiv

--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -203,15 +203,15 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   rmdnote={pdf=http://hdl.handle.net/11343/197958}
 }
 
-@misc{fish2017sublineartime,
-  title={Sublinear-Time Adaptive Data Analysis},
+@misc{fish2019sampling,
+  title={Sampling Without Compromising Accuracy in Adaptive Data Analysis},
   author={Fish, Benjamin and Reyzin, Lev and Rubinstein, Benjamin I. P.},
   eprinttype = {arXiv},
   eprintclass = {cs.LG},
   eprint = {1709.09778},
-  year={2017},
-  month={Sep},
-  presort={07},
+  year={2019},
+  month={Jan},
+  presort={05},
   rmdnote={pdf=https://arxiv.org/pdf/1709.09778}
 }
 
