--- a/group.Rmd
+++ b/group.Rmd
@@ -21,10 +21,10 @@ I am fortunate to have supervised a brilliant group of researchers
 * [Dongge Liu](https://www.linkedin.com/in/dongge-liu-9a957913a) (w Toby Murray, Gideon Ernst 2018-- ). Software fuzzing with machine learning.
 * [Leyla Roohi](https://au.linkedin.com/in/leyla-roohi-b4544a67) (w Vanessa Teague 2017-- ). Secure storage and private querying for telecommunications metadata.
 * [Neil Marchant](https://www.linkedin.com/in/neil-marchant-466678aa/) (w Aurore Delaigle 2016-- ). Record linkage, adaptive importance sampling.
-* Yuan Li (w Trevor Cohn 2015-- ). Crowd sourcing, Bayesian optimisation, NLP.
 
 ### PhD students---Completed
 
+* Yuan Li (w Trevor Cohn 2015--19). Crowd sourcing, Bayesian optimisation, NLP (completed; under examination)
 * [Lingjuan Lyu](https://www.researchgate.net/profile/Lingjuan_Lyu) (w Marimuthu Palaniswami 2016--18). Privacy in distributed sensing → Postdoc at the ANU
 * [Safiollah Heidari](https://sites.google.com/site/safiheidari/) (w Raj Buyya 2015--18). Distributed graph processing → Founder, NeuroPhyte
 * [Xunyun Liu](https://xunyunliu.github.io/) (w Raj Buyya, Rodrigo Calheiros 2015--18). Stream computing → Assistant Prof at NUDT
