--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -211,8 +211,20 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   eprint = {1709.09778},
   year={2019},
   month={Jan},
-  presort={05},
+  presort={06},
   rmdnote={pdf=https://arxiv.org/pdf/1709.09778}
+}
+
+@misc{oetomo2019a,
+  title={A Note on Bounding Regret of the C$^2$UCB Contextual Combinatorial Bandit},
+  author={Bastian Oetomo and Malinga Perera and Renata Borovica-Gajic and Benjamin I. P. Rubinstein},
+  eprinttype = {arXiv},
+  eprintclass = {cs.LG},
+  eprint = {1902.07500},
+  year={2019},
+  month={Feb},
+  presort={05},
+  rmdnote={pdf=https://arxiv.org/pdf/1902.07500}
 }
 
 @inproceedings{liu2017estorm,
