--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -5,7 +5,8 @@
   booktitle={Proceedings of the 2019 World Wide Web Conferece},
   series={WWW},
   note={accepted},
-  presort={01}
+  presort={01},
+  rmdnote={full=http://arxiv.org/abs/1902.08918}
 }
 
 @inproceedings{roohi2019differentiallyprivate,
