--- a/bib/citations.bib
+++ b/bib/citations.bib
@@ -1,3 +1,13 @@
+@inproceedings{li2019exploiting,
+  title={Exploiting Worker Correlation for Label Aggregation in Crowdsourcing},
+  author={Li, Yuan and Rubinstein, Benjamin I. P. and Cohn, Trevor},
+  year={2019},
+  booktitle={Proceedings of the 36th International Conference on Machine Learning},
+  series={ICML},
+  note={accepted},
+  presort={01}
+}
+
 @inproceedings{li2019truth,
   title={Truth inference at scale: {A} {B}ayesian model for adjudicating highly redundant crowd annotations},
   author={Li, Yuan and Rubinstein, Benjamin I. P. and Cohn, Trevor},
@@ -5,7 +15,7 @@
   booktitle={Proceedings of the 2019 World Wide Web Conferece},
   series={WWW},
   note={accepted},
-  presort={01},
+  presort={02},
   rmdnote={full=http://arxiv.org/abs/1902.08918}
 }
 
@@ -16,7 +26,7 @@
   booktitle={The 38th Annual IEEE International Conference on Computer Communications},
   series={INFOCOM},
   note={accepted},
-  presort={02},
+  presort={03},
   rmdnote={full=https://arxiv.org/abs/1901.05562}
 }
 
@@ -27,7 +37,7 @@
   series={AAAI},
   note={accepted},
   year={2019},
-  presort={03},
+  presort={04},
   rmdnote={pdf=https://www.aaai.org/Papers/AAAI/2019/AAAI-AlfeldS.6136.pdf}
 }
 
@@ -90,7 +100,7 @@ author = {Joseph, Anthony D. and Nelson, Blaine and Rubinstein, Benjamin I. P. a
 publisher = {Cambridge University Press},
 note = {in press for April 2019 publication},
 rmdnote = {pub=https://www.cambridge.org/core/books/adversarial-machine-learning/C42A9D49CBC626DF7B8E54E72974AA3B},
-presort={04}
+presort={05}
 }
 
 @misc{culnane2018options,
@@ -212,7 +222,7 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   eprint = {1709.09778},
   year={2019},
   month={Jan},
-  presort={06},
+  presort={07},
   rmdnote={pdf=https://arxiv.org/pdf/1709.09778}
 }
 
@@ -224,7 +234,7 @@ rmdnote={pub=https://link.springer.com/chapter/10.1007/978-3-319-93040-4_36}
   eprint = {1902.07500},
   year={2019},
   month={Feb},
-  presort={05},
+  presort={06},
   rmdnote={pdf=https://arxiv.org/pdf/1902.07500}
 }
 
